chore: fix vertical align

--- a/styles/main.css
+++ b/styles/main.css
@@ -458,9 +458,9 @@ body {
   position: fixed;
   top: 50%;
   left: 50%;
-  height: 300px;
-  width: 300px;
-  margin: -150px 0 0 -150px;
+  height: 350px;
+  width: 350px;
+  margin: -175px 0 0 -175px;
   color: #fff;
   text-align: center;
 }
